RTI-2518 - Fix Sparkline alignment in dark mode.

--- a/community-modules/styles/src/internal/base/parts/_charts.scss
+++ b/community-modules/styles/src/internal/base/parts/_charts.scss
@@ -414,7 +414,8 @@
         background-color: var(--ag-control-panel-background-color);
     }
 
-    .ag-charts-theme-default {
+    .ag-charts-theme-default,
+    .ag-charts-theme-default-dark {
         --ag-charts-align: none !important;
         --ag-charts-justify: none !important;
     }
